--- a/graph.html
+++ b/graph.html
@@ -118,9 +118,9 @@ Time per aisle for customer (012345):
 	<div id="timeline-tooltip1" style="height: 360px;"></div>
 	
 Most Popular Areas:
-    <div id="piechart" style="width: 900px; height: 500px;"></div>
+<!--    <div id="piechart" style="width: 900px; height: 500px;"></div>
 	
-From json:
+From json: -->
 	<div id="chart_div"></div>
 
   </body>
